优化-重写了识别unicode的识别逻辑,加上了hutool工具包